# MemeBot

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  base-config.yaml  maubot-api.py  maubot-dev.py  maubot.yaml  pyproject.toml
MemeBot/: __init__.py  config.py
MemeBot/mixins/: __init__.py  command_mixin.py  cooldown_mixin.py  image_mixin.py  server_mixin.py  types.py
